# classroom

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/remix/: end.d.ts  env.ts  eslint.config.js  load-context.ts  package.json  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
apps/remix/app/: entry.server.tsx  root.tsx  tailwind.css
apps/remix/app/components/: activity-layout.tsx  board.client.tsx  chat-room.tsx  document.client.tsx  forms.tsx  header.tsx  logo.tsx  rooms-counter.tsx  tldraw-context.tsx
apps/remix/app/core/: auth.server.ts  cachified.server.ts  services.server.ts  session.server.ts
apps/remix/app/routes/: _index.tsx
apps/remix/app/styles/: activity.css
apps/remix/app/utils/: array.ts  env.ts  use-y-js-store.ts  zod.ts
apps/ws-server/: README.md  package.json  partykit.json
apps/ws-server/src/: index.ts  server.ts
config/eslint/: base.js  package.json
config/prettier/: index.js  package.json
config/tailwind/: eslint.config.js  package.json  tsconfig.json
config/typescript/: base.json  package.json  worker.json
patches/: @conform-to__dom@1.1.3.patch  partykit@0.0.105.patch  remix-utils@7.6.0.patch
services/argon2/: .gitignore  Cargo.toml  README.md  index.ts  package.json  wrangler.toml
services/argon2/src/: lib.rs
services/auth/: .gitignore  eslint.config.js  package.json  tsconfig.json  wrangler.toml
services/auth/src/: env.ts  index.ts
services/chat/: eslint.config.js  package.json  wrangler.toml
services/chat/src/: index.ts
(+19 files in other folders)
